# SVD-Image-Compression

./: Cargo.toml
src/: main.rs
