[package]
name = "svg-compression"
version = "0.1.0"
authors = ["Gustav Sörnäs <gustav@sornas.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

blas = "0.20"
peroxide = { version = "0.30", features = [ "O3" ] }
png = "0.16"
rayon = "1"

chrono = "0.4"
colored = "2"
fern = "0.6"
log = "0.4"
